@@ -1,3 +1,6 @@
+2013-05-14	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* src/db.c: fixed segfault when dbconf->db_out is NULL
+
 2013-05-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/compare_db.c:
 	  - fixed output of checksums
